refactor: Corrige alinhamento do rodapé

--- a/public/scali.html
+++ b/public/scali.html
@@ -423,7 +423,6 @@
         </section>
 
         <footer id="footer" class="section-nap-scroll">
-
             <div class="side-l">
                 <div class="menu-footer">
                     <a href="#intro">PROJECTS</a>
@@ -438,14 +437,6 @@
                         Policy</a>
                 </p>
 
-                <p class="disclaimer">This is not an offering for sale. Any such offering must be made by way of
-                    disclosure statement. In
-                    our continuing effort to improve and maintain the high standard of the Scale development, the
-                    developer reserves the right to modify or change plans, specifications, features and prices without
-                    notice. Materials may be substituted with equivalent or better at the developer's sole discretion.
-                    All dimensions and sizes are approximate and are based on architectural measurements. Rendering are
-                    an artists conception and are intended as a general reference only. E &O.E. Sales and Marketing
-                    provided by Fifth Avenue Real Estate Marketing Ltd. 604-583-2212</p>
                 <div id="privacy-modal2">
                     <span id="close-modal" onclick="closePrivacyModal2()">&times;</span>
                     <h2 style="font-size: 0.8em; letter-spacing: 0.1em; font-family: 'Brinnan-Bold';">Privacy Policy:
@@ -479,29 +470,40 @@
                 <div class="bl-dow">
                     <h6 class="BALANCE">BALANCE</h6>
                     <h3 class="lifestyle lst">
-                        <span
-                            style="font-family: 'AddingtonCF-DemiBoldItalic'; font-size: 0.6em;word-spacing: 0.29em;">is
-                            a </span> lifestyle
+                        <span style="font-family: 'AddingtonCF-DemiBoldItalic'; font-size: 0.6em;">
+                            is a
+                        </span>
+                        <span style="font-family: 'AddingtonCF-DemiBoldItalic'">
+                            lifestyle
+                        </span>
                     </h3>
                 </div>
-                <div>
-                    <a href="https://fifthave.ca/"><img src="images/Fifth-Ave.png" alt="FIFTH AVU"
-                            class="logo-fifth"></a>
-                </div>
             </div>
+            
+            <a href="https://fifthave.ca/"><img src="images/Fifth-Ave.png" alt="FIFTH AVU" class="logo-fifth"></a>
 
             <div class="side-r">
                 <img src="images/logo.png" alt="Logo 1" class="logodown">
 
                 <p class="adress">
-                    Presentation Centre Coming Soon!
-                    <span style="color: #ffffff;">
-                    </span><br><br>
-
+                    <span style="text-transform: uppercase; display: block; font-family: 'Brinnan-Bold'">
+                        Presentation Centre <br>
+                        Coming Soon!
+                    </span>
+                    <br>
                     homes@scaleliving.ca
                 </p>
                 <a href="#intro"><img src="images/logo2.png" alt="logo2" class="logo2down"></a>
             </div>
+
+            <p class="disclaimer">This is not an offering for sale. Any such offering must be made by way of
+                disclosure statement. In
+                our continuing effort to improve and maintain the high standard of the Scale development, the
+                developer reserves the right to modify or change plans, specifications, features and prices without
+                notice. Materials may be substituted with equivalent or better at the developer's sole discretion.
+                All dimensions and sizes are approximate and are based on architectural measurements. Rendering are
+                an artists conception and are intended as a general reference only. E &O.E. Sales and Marketing
+                provided by Fifth Avenue Real Estate Marketing Ltd. 604-583-2212</p>
         </footer>
 
         <!-- Scripts -->
