--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,21 @@
 	<title>Scale</title>
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet" href="assets/css/responsive.css" />
-	<noscript>
+	<link rel="icon" href="images/S-favIcon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="images/S-favIcon.ico" type="image/x-icon">
+
+	<!-- <noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
-	</noscript>
+	</noscript> -->
 	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <style>
 
 </style>
 
-<body class="is-preload">
+<!-- <body class="is-preload"> -->
+
+<body>
 
 	<header id="header">
 		<div style="display: flex;
