--- a/public/indexOtimizado.html
+++ b/public/indexOtimizado.html
@@ -7,9 +7,9 @@
     <title>Scale</title>
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
-    <noscript>
+    <!-- <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css" />
-    </noscript>
+    </noscript> -->
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <style>
@@ -54,9 +54,6 @@
                         </p>
                     </div>
                 </header>
-                <footer>
-
-                </footer>
             </div>
             <a href="#five" class="button style2 down" style="
 				position: fixed;
