fix: Favicon não aparecia

--- a/public/scali.html
+++ b/public/scali.html
@@ -7,7 +7,7 @@
     <title>Scale</title>
     <link rel="stylesheet" href="assets/css/fullpage.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/S-favIcon.png">
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="./images/S-favIcon.ico">
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css" />
     </noscript>
