--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVNHJ392ZT"></script>
+	<script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-LVNHJ392ZT'); </script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Scale</title>
@@ -10,18 +13,26 @@
 	<link rel="icon" href="images/S-favIcon.ico" type="image/x-icon">
 	<link rel="shortcut icon" href="images/S-favIcon.ico" type="image/x-icon">
 
-	<!-- <noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
-	</noscript> -->
+	<!-- Google Tag Manager -->
+	<script>(function (w, d, s, l, i) {
+			w[l] = w[l] || []; w[l].push({
+				'gtm.start':
+					new Date().getTime(), event: 'gtm.js'
+			}); var f = d.getElementsByTagName(s)[0],
+				j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+					'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+		})(window, document, 'script', 'dataLayer', 'GTM-M52RBD8K');</script>
+	<!-- End Google Tag Manager -->
+
 	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
-<style>
 
-</style>
-
-<!-- <body class="is-preload"> -->
 
 <body>
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src=https://www.googletagmanager.com/ns.html?id=GTM-M52RBD8K height="0" width="0"
+			style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 
 	<header id="header">
 		<div style="display: flex;
