--- a/public/scali.html
+++ b/public/scali.html
@@ -134,7 +134,7 @@
             <div id="menu">
                 <h3 class="location">
                     LOCATION</h3>
-                <a href=" #" onclick="return showImage(this, 'images/Layers JPEG-PNG/FULL_MAP.jpg');">NEIGHBOURHOOD</a>
+                <a href=" #" onclick="return showImage(this, 'images/Layers JPEG-PNG/FULL_MAP.jpg');" class="active">NEIGHBOURHOOD</a>
                 <a class="" href="#"
                     onclick="return showImage(this, 'images/Layers JPEG-PNG/RESTAURANTS.png');">RESTAURANTS</a>
                 <a href="#" onclick="return showImage(this, 'images/Layers JPEG-PNG/PARKS.png');">PARKS</a>
