refactor: Adequa menu para o mobile

--- a/public/scali.html
+++ b/public/scali.html
@@ -16,6 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scale</title>
     <link rel="stylesheet" href="assets/css/fullpage.css" />
+    <link rel="stylesheet" href="assets/css/fullpage-mobile.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
     <link rel="icon" type="image/x-icon" sizes="32x32" href="./images/S-favIcon.ico">
