feat: Imagens mobile para o carrossel

--- a/public/scali.html
+++ b/public/scali.html
@@ -16,6 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scale</title>
     <link rel="stylesheet" href="assets/css/fullpage.css" />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
     <link rel="stylesheet" href="assets/css/fullpage-mobile.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
@@ -66,7 +67,7 @@
                                 STUDIO, 1, 1 & FLEX, 2, 2 + FLEX<br>
                             </span>
                             IN LANGLEY CITY,<br>
-                            MINUTES TO THE NEW SKYTRAIN
+                            MINUTES TO THE FUTURE SKYTRAIN
                         </p>
                         <p style="font-size: 1em;font-family: 'Beliau-Regular';color: #0b1b30; white-space: nowrap;">
                             PRESENTATION CENTER <span style="color: #be694b;"> COMING SOON </span>
@@ -106,16 +107,19 @@
                     <!-- Slides -->
                     <div class="swiper-slide">
                         <picture>
+                            <source srcset="images/carousel/mobile-1.jpg" media="(orientation: portrait)" />
                             <img src="images/carousel/desktop-1.jpg" />
                         </picture>
                     </div>
                     <div class="swiper-slide">
                         <picture>
+                            <source srcset="images/carousel/mobile-2.jpg" media="(orientation: portrait)" />
                             <img src="images/carousel/desktop-2.jpg" />
                         </picture>
                     </div>
                     <div class="swiper-slide">
                         <picture>
+                            <source srcset="images/carousel/mobile-3.jpg" media="(orientation: portrait)" />
                             <img src="images/carousel/desktop-3.jpg" />
                         </picture>
                     </div>
