--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
 							<Span style="white-space: nowrap;">IN LANGLEY CITY<br> MINUTES TO THE FUTURE SKYTRAIN</Span>
 						</p>
 						<p style="font-size: 1em;font-family: 'Beliau-Regular';color: #0b1b30; white-space: nowrap;">
-							PRESENTATION CENTER <span style="color: #be694b;"> COMING SOON </span>
+							PRESENTATION CENTER <span style="color: #be694b;"><br> COMING SOON </span>
 						</p>
 					</div>
 				</header>
