refactor: Carrossel mobile

--- a/public/scali.html
+++ b/public/scali.html
@@ -217,14 +217,25 @@
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="images/SCALI_ST1_15_Vignette_C_GIFT_R1.jpg" alt="Image 1"
-                                style="object-position: bottom center;">
+                            <picture>
+                                <source srcset="images/carousel-2/mobile-1.jpg" media="(max-width: 960px)" />
+                                <img class="d-block w-100" src="images/SCALI_ST1_15_Vignette_C_GIFT_R1.jpg"
+                                    alt="Image 1" style="object-position: bottom center;">
+                            </picture>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="images/SCALI_ST1_14_Vignette_B_GIFT_R1.jpg" alt="Image 2">
+                            <picture>
+                                <source srcset="images/carousel-2/mobile-2.jpg" media="(max-width: 960px)" />
+                                <img class="d-block w-100" src="images/SCALI_ST1_14_Vignette_B_GIFT_R1.jpg"
+                                    alt="Image 2">
+                            </picture>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="images/SCALI_ST1_13_Vignette_A_GIFT_R1.jpg" alt="Image 3">
+                            <picture>
+                                <source srcset="images/carousel-2/mobile-3.jpg" media="(max-width: 960px)" />
+                                <img class="d-block w-100" src="images/SCALI_ST1_13_Vignette_A_GIFT_R1.jpg"
+                                    alt="Image 3">
+                            </picture>
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
