--- a/public/scali.html
+++ b/public/scali.html
@@ -2,14 +2,19 @@
 <html lang="en">
 
 <head>
-    <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-LVNHJ392ZT"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-LVNHJ392ZT'); </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LVNHJ392ZT"></script>
+    <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-LVNHJ392ZT'); </script>
 
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-M52RBD8K');</script>
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-M52RBD8K');</script>
     <!-- End Google Tag Manager -->
 
     <meta charset="UTF-8">
@@ -29,7 +34,8 @@
 
 <body class="is-preload">
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M52RBD8K" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M52RBD8K" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
     <header id="header1">
@@ -153,7 +159,8 @@
             <div id="menu">
                 <h3 class="location">
                     LOCATION</h3>
-                <a href=" #" onclick="return showImage(this, 'images/Layers JPEG-PNG/FULL_MAP.jpg');" class="active">NEIGHBOURHOOD</a>
+                <a href=" #" onclick="return showImage(this, 'images/Layers JPEG-PNG/FULL_MAP.jpg');"
+                    class="active">NEIGHBOURHOOD</a>
                 <a class="" href="#"
                     onclick="return showImage(this, 'images/Layers JPEG-PNG/RESTAURANTS.png');">RESTAURANTS</a>
                 <a href="#" onclick="return showImage(this, 'images/Layers JPEG-PNG/PARKS.png');">PARKS</a>
@@ -186,7 +193,7 @@
         </section>
 
         <section id="six" class="main  right dark fullscreen section-nap-scroll">
-            <img src="images/scale-sec6.png" class="amenities-logo">    
+            <img src="images/scale-sec6.png" class="amenities-logo">
             <img src="images/SCALI_01_Hero_Streetscape.jpg" alt="Streetscape" class="Streetscape_image">
             <h3 class="amenities">
                 <div class="textAmenitties">ENJOY OUR AMENITIES</div>
@@ -195,12 +202,13 @@
         </section>
 
         <section id="seven" class="main  right dark fullscreen section-nap-scroll">
-            <img src="images/S.png" alt="Imagem S" class="s-sec2">
-            <div class="text-logo">YOUR LIFE <span style="font-family: 'Brinnan-Light';
-			 color: #f6f6f6;">
-                    IN FOCUS. </span>
+            <div class="left-section7">
+                <img src="images/S.png" alt="Imagem S" class="s-sec2">
+                <div class="text-logo">YOUR LIFE <span style="font-family: 'Brinnan-Light';
+                 color: #f6f6f6;">
+                        IN FOCUS. </span>
+                </div>
             </div>
-            <div class="left-section7"></div>
             <div class="right-section7">
                 <p class="about quiet4">Whether you're leaving for a
                     weekend trip or coming home
@@ -717,4 +725,5 @@
         }
     })
 </script>
+
 </html>
