refactor: Adapta "Life is real" para mobile

--- a/public/scali.html
+++ b/public/scali.html
@@ -76,7 +76,8 @@
                             MINUTES TO THE FUTURE SKYTRAIN
                         </p>
                         <p style="font-size: 1em;font-family: 'Beliau-Regular';color: #0b1b30; white-space: nowrap;">
-                            PRESENTATION CENTER <span style="color: #be694b;"> COMING SOON </span>
+                            PRESENTATION CENTER <br>
+                            <span style="color: #be694b;"> COMING SOON </span>
                         </p>
                     </div>
                 </header>
