refactor: Ajusta rodapé para o mobile

--- a/public/scali.html
+++ b/public/scali.html
@@ -76,7 +76,7 @@
                             MINUTES TO THE FUTURE SKYTRAIN
                         </p>
                         <p style="font-size: 1em;font-family: 'Beliau-Regular';color: #0b1b30; white-space: nowrap;">
-                            PRESENTATION CENTER <br>
+                            PRESENTATION CENTER <br class="mobile-only">
                             <span style="color: #be694b;"> COMING SOON </span>
                         </p>
                     </div>
@@ -488,12 +488,25 @@
         </section>
 
         <footer id="footer" class="section-nap-scroll">
-            <div class="side-l">
-                <div class="menu-footer">
-                    <a href="#intro">PROJECTS</a>
-                    <a href="#two">CONTACT</a>
-                    <a href="#one">ABOUT</a>
+            <div class="footer-row">
+                <div class="side-l">
+                    <div class="menu-footer">
+                        <a href="#intro">PROJECTS</a>
+                        <a href="#two">CONTACT</a>
+                        <a href="#one">ABOUT</a>
+                    </div>
                 </div>
+
+                <div class="side-r">
+                    <img src="images/logo.png" alt="Logo 1" class="logodown">
+
+                    <p class="adress">
+                        homes@scaleliving.ca
+                    </p>
+                </div>
+            </div>
+
+            <div class="footer-row">
                 <p class="privacy">
                     Copyright &copy; 2023 Scale Projects
                     <a href="javascript:void(0)"
@@ -502,36 +515,6 @@
                         Policy</a>
                 </p>
 
-                <div id="privacy-modal2">
-                    <span id="close-modal" onclick="closePrivacyModal2()">&times;</span>
-                    <h2 style="font-size: 0.8em; letter-spacing: 0.1em; font-family: 'Brinnan-Bold';">Privacy Policy:
-                    </h2>
-                    <hr style="margin-top: 4%;margin-bottom: 5%;border: 0;border-top: 1px solid #0b1b30;">
-                    <div id="privacy-content" style="font-size: 0.78em; letter-spacing: 0.08em;">
-                        <p>In our continuing effort to improve and maintain the high standard of the Scale development,
-                            the developer
-                            reserves the right to modify or change plans, layouts, specifications, features, including
-                            appliances, and prices
-                            without notice. Materials may be substituted with equivalent or better at the developer’s
-                            sole discretion. All
-                            dimensions and sizes are approximate and are based on architectural measurements. As
-                            reverse, flipped
-                            and/or mirrored plans occur throughout the development please see architectural plans for
-                            current unit
-                            layout, if material to your decision to purchase. Illustrations, renderings and marketing
-                            materials provided are
-                            an artist’s conception and are intended as a general reference only, all subject to change
-                            without prior notice
-                            and not to be relied upon. Please ask one of the helpful sales staff to reference the
-                            current architectural set
-                            of construction drawings for the most accurate dimensions and other details at time of sale.
-                            E.&O.E. Sales &
-                            Marketing provided by Fifth Avenue Real Estate Marketing Ltd. 604-583-2212</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="side-center">
                 <div class="bl-dow">
                     <h6 class="BALANCE">BALANCE</h6>
                     <h3 class="lifestyle lst">
@@ -543,33 +526,51 @@
                         </span>
                     </h3>
                 </div>
-            </div>
 
-            <a href="https://fifthave.ca/"><img src="images/Fifth-Ave.png" alt="FIFTH AVU" class="logo-fifth"></a>
+                <a href="https://fifthave.ca/"><img src="images/Fifth-Ave.png" alt="FIFTH AVU" class="logo-fifth"></a>
 
-            <div class="side-r">
-                <img src="images/logo.png" alt="Logo 1" class="logodown">
-
-                <p class="adress">
-                    <span style="text-transform: uppercase; display: block; font-family: 'Brinnan-Bold'">
-                        Presentation Centre <br>
-                        Coming Soon!
-                    </span>
-                    <br>
-                    homes@scaleliving.ca
-                </p>
                 <a href="#intro"><img src="images/logo2.png" alt="logo2" class="logo2down"></a>
             </div>
 
-            <p class="disclaimer">This is not an offering for sale. Any such offering must be made by way of
-                disclosure statement. In
-                our continuing effort to improve and maintain the high standard of the Scale development, the
-                developer reserves the right to modify or change plans, specifications, features and prices without
-                notice. Materials may be substituted with equivalent or better at the developer's sole discretion.
-                All dimensions and sizes are approximate and are based on architectural measurements. Rendering are
-                an artists conception and are intended as a general reference only. E &O.E. Sales and Marketing
-                provided by Fifth Avenue Real Estate Marketing Ltd. 604-583-2212</p>
+            <div class="footer-row">
+                <p class="disclaimer">This is not an offering for sale. Any such offering must be made by way of
+                    disclosure statement. In
+                    our continuing effort to improve and maintain the high standard of the Scale development, the
+                    developer reserves the right to modify or change plans, specifications, features and prices without
+                    notice. Materials may be substituted with equivalent or better at the developer's sole discretion.
+                    All dimensions and sizes are approximate and are based on architectural measurements. Rendering are
+                    an artists conception and are intended as a general reference only. E &O.E. Sales and Marketing
+                    provided by Fifth Avenue Real Estate Marketing Ltd. 604-583-2212</p>
+            </div>
         </footer>
+
+        <div id="privacy-modal2">
+            <span id="close-modal" onclick="closePrivacyModal2()">&times;</span>
+            <h2 style="font-size: 0.8em; letter-spacing: 0.1em; font-family: 'Brinnan-Bold';">Privacy Policy:
+            </h2>
+            <hr style="margin-top: 4%;margin-bottom: 5%;border: 0;border-top: 1px solid #0b1b30;">
+            <div id="privacy-content" style="font-size: 0.78em; letter-spacing: 0.08em;">
+                <p>In our continuing effort to improve and maintain the high standard of the Scale development,
+                    the developer
+                    reserves the right to modify or change plans, layouts, specifications, features, including
+                    appliances, and prices
+                    without notice. Materials may be substituted with equivalent or better at the developer’s
+                    sole discretion. All
+                    dimensions and sizes are approximate and are based on architectural measurements. As
+                    reverse, flipped
+                    and/or mirrored plans occur throughout the development please see architectural plans for
+                    current unit
+                    layout, if material to your decision to purchase. Illustrations, renderings and marketing
+                    materials provided are
+                    an artist’s conception and are intended as a general reference only, all subject to change
+                    without prior notice
+                    and not to be relied upon. Please ask one of the helpful sales staff to reference the
+                    current architectural set
+                    of construction drawings for the most accurate dimensions and other details at time of sale.
+                    E.&O.E. Sales &
+                    Marketing provided by Fifth Avenue Real Estate Marketing Ltd. 604-583-2212</p>
+            </div>
+        </div>
 
         <!-- Scripts -->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
