refactor: Adapta mapa para o mobile

--- a/public/scali.html
+++ b/public/scali.html
@@ -154,8 +154,12 @@
         </section>
 
         <section id="four" class="main  right dark fullscreen split-section-horizon section-nap-scroll">
+
+            <h3 class="location mobile-only">
+                LOCATION</h3>
+
             <div id="menu">
-                <h3 class="location">
+                <h3 class="location desktop-only">
                     LOCATION</h3>
                 <a href=" #" onclick="return showImage(this, 'images/Layers JPEG-PNG/FULL_MAP.jpg');"
                     class="active">NEIGHBOURHOOD</a>
