fix: Texto deve quebrar no mobile

--- a/public/scali.html
+++ b/public/scali.html
@@ -327,7 +327,7 @@
 
                     <div class="div-flex text-input">
                         <label for="contact-method"
-                            style="padding-right: 1em; font-weight: bold; font-size: 75%; white-space: nowrap;">
+                            style="padding-right: 1em; font-weight: bold; font-size: 75%;">
                             HOW WOULD YOU LIKE TO BE CONTACTED?</label>
 
                         <input type="checkbox" id="checkbox-phone" name="contact-method" value="Phone">
