--- a/public/scali.html
+++ b/public/scali.html
@@ -510,7 +510,7 @@
                 <p class="privacy">
                     Copyright &copy; 2023 Scale Projects
                     <a href="javascript:void(0)"
-                        style="margin-left: 10px; white-space: nowrap; text-decoration: underline;"
+                        style="white-space: nowrap; text-decoration: underline;"
                         onclick="openPrivacyModal2()">Privacy
                         Policy</a>
                 </p>
